src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=Outfit:wght@200;400;500;600;800&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    height: 100%;
    scroll-behavior: smooth;
  }
  body {
    @apply bg-gray-100;
    height: 100%;
    font-family: "Outfit", sans-serif;
    scroll-behavior: smooth;
  }
  body.dark {
    @apply bg-almost-black transition-colors;
  }
  #___gatsby,
  #gatsby-focus-wrapper {
    min-height: 100%;
  }
}

